feat: implement comprehensive tests for ProducerMapper and TrackMapper
- Add ProducerMapperTest with 10 test methods covering all mapping scenarios
- Add TrackMapperTest with 8 test methods including edge cases
- Achieve 100% test coverage for both mapper classes
- Test all mapping methods, collections, and conditional logic
- Use real domain objects and proper test data generation
- Follow project testing conventions with JUnit 5 and AssertJ